--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2018"
 [dependencies.reqwest]
 version = "0.11"
 default-features = false
+
+[dependencies.tokio]
+version = "1.5"
+default-features = false
+features = ["full"]
