:heavy_plus_sign: Add the toml crate as a new dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ features = ["native-tls"]
 version = "1.5"
 default-features = false
 features = ["full"]
+
+[dependencies.toml]
+version = "0.5"
+default-features = false
