--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,7 @@ features = ["full"]
 [dependencies.toml]
 version = "0.5"
 default-features = false
+
+[dependencies.serde]
+version = "1.0"
+default-features = false
