--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,7 @@ default-features = false
 [dependencies.serde]
 version = "1.0"
 default-features = false
+
+[dependencies.serde_derive]
+version = "1.0"
+default-features = false
