--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,7 @@ default-features = false
 [dependencies.serde]
 version = "1.0"
 default-features = false
-
-[dependencies.serde_derive]
-version = "1.0"
-default-features = false
+features = ["derive"]
 
 [dependencies.clap]
 version = "3.0.0-beta.2"
