--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies.reqwest]
 version = "0.11"
 default-features = false
-features = ["native-tls"]
+features = ["native-tls", "json"]
 
 [dependencies.tokio]
 version = "1.5"
