--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,15 @@ version = "0.11"
 default-features = false
 features = ["native-tls", "json"]
 
+[dependencies.lazy_static]
+version = "1.4"
+default-features = false
+
+[dependencies.regex]
+version = "1.5"
+default-features = false
+features = ["std"]
+
 [dependencies.tokio]
 version = "1.5"
 default-features = false
