--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,10 @@ features = ["native-tls", "json"]
 version = "1.4"
 default-features = false
 
+[dependencies.unqlite]
+version = "1.5"
+default-features = false
+
 [dependencies.regex]
 version = "1.5"
 default-features = false
