--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "trello-velocity-calculator"
 version = "2021.5.0"
-authors = ["Tim Hütz <tim+github@janke.biz>"]
+authors = ["Tim Janke <tim+github@janke.biz>"]
 edition = "2018"
 
 [dependencies.reqwest]
